Atualiza descrições de entrevistas e reformula seção de contato para melhor clareza e estética

--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
                                 <i class="fas fa-video"></i>
                             </div>
                             <h4>Câmara Municipal de Registro</h4>
-                            <p>Citação oficial do projeto WACS e reconhecimento do impacto social na região. Apoio institucional.</p>
+                            <p>Menção oficial ao WACS e ao impacto social na região.</p>
                             <a href="https://www.instagram.com/p/DRhNkyNiKor/" class="media-btn" target="_blank" rel="noopener noreferrer"><span data-i18n="media.reels_btn">Ver Reels</span> <i class="fas fa-arrow-right"></i></a>
                         </article>
                     </div>
@@ -823,7 +823,7 @@
                             </div>
                             <span class="media-source"><i class="fas fa-robot"></i> Robótica CPS</span>
                             <h4>11º Torneio de Robocode - 2º Lugar BarbieScript</h4>
-                            <p class="badge-subtitle">Conquista histórica no torneio nacional de robótica organizado pelo Centro Paula Souza. O projeto BarbieScript, desenvolvido pela equipe da Etec de Registro, alcançou a segunda colocação em uma competição que reuniu instituições de todo o Brasil. Esta vitória demonstra a excelência técnica dos estudantes e o alto nível de qualidade dos projetos desenvolvidos na instituição, consolidando a posição da Etec como referência em educação tecnológica e inovação.</p>
+                            <p class="badge-subtitle">2º lugar nacional no torneio de robótica do CPS com o projeto BarbieScript.</p>
                             <a href="https://robotica.cps.sp.gov.br/11o-torneio-de-robocode/" target="_blank" rel="noopener noreferrer"><span data-i18n="media.robocode_btn">Ver Resultado</span> <i class="fas fa-arrow-right"></i></a>
                         </article>
 
@@ -833,7 +833,7 @@
                             </div>
                             <span class="media-source"><i class="fas fa-star"></i> FETEPS Oficial</span>
                             <h4>Victor Theodoro - Destaque na FETEPS Premium</h4>
-                            <p class="badge-subtitle">Victor Theodoro foi destaque na categoria premium da FETEPS, a maior feira de tecnologia do Centro Paula Souza. Sua participação nesta exposição de alto nível demonstra suas habilidades avançadas em desenvolvimento de soluções tecnológicas inovadoras. Esta seleção premium reconhece seu talento e potencial como profissional da tecnologia, conectando-o com empresários, investidores e líderes da indústria.</p>
+                            <p class="badge-subtitle">Destaque na FETEPS Premium, reconhecendo inovação e qualidade técnica.</p>
                             <a href="https://feteps.cps.sp.gov.br/projetos/wacs-autonomia-inteligente-para-pcds/" target="_blank" rel="noopener noreferrer"><span data-i18n="media.feteps_btn">Ver Projeto</span> <i class="fas fa-arrow-right"></i></a>
                         </article>
 
@@ -843,7 +843,7 @@
                             </div>
                             <span class="media-source"><i class="fas fa-chalkboard-user"></i> Etec Registro</span>
                             <h4>Victor Theodoro - Destaque na 16ª FETEPS</h4>
-                            <p class="badge-subtitle">Victor Theodoro foi destacado como um dos estudantes de destaque na 16ª edição da Feira Tecnológica do Centro Paula Souza. A publicação institucional apresenta seus projetos inovadores e enfatiza a qualidade do ensino técnico oferecido pela Etec de Registro. Esta cobertura demonstra o compromisso da instituição com a formação de profissionais capacitados e inovadores, contribuindo para o desenvolvimento tecnológico regional.</p>
+                            <p class="badge-subtitle">Destaque institucional na 16ª FETEPS pelos projetos desenvolvidos.</p>
                             <a href="https://etecregistro.cps.sp.gov.br/alunos-da-etec-de-registro-sao-destaques-na-16a-feira-de-tecnologia-do-centro-paula-souza/" target="_blank" rel="noopener noreferrer"><span data-i18n="media.etec16_btn">Conhecer</span> <i class="fas fa-arrow-right"></i></a>
                         </article>
 
@@ -853,7 +853,7 @@
                             </div>
                             <span class="media-source"><i class="fas fa-chalkboard-user"></i> Etec Registro</span>
                             <h4>Victor Theodoro - Destaque na FETEPS 2026</h4>
-                            <p class="badge-subtitle">Publicação especial da Etec de Registro celebrando a participação de Victor Theodoro na FETEPS 2026. A matéria expressa o orgulho institucional pelos estudantes que desenvolveram soluções tecnológicas inovadoras, destacando como seu trabalho representa o sucesso do modelo educacional da instituição e o impacto positivo na comunidade, inspirando outros estudantes a se dedicarem à inovação e à solução de problemas sociais.</p>
+                            <p class="badge-subtitle">Publicação especial da Etec celebrando a participação na FETEPS 2026.</p>
                             <a href="https://etecregistro.cps.sp.gov.br/feteps-2026-que-orgulho/" target="_blank" rel="noopener noreferrer"><span data-i18n="media.feteps2026_btn">Acompanhar</span> <i class="fas fa-arrow-right"></i></a>
                         </article>
 
@@ -863,7 +863,7 @@
                             </div>
                             <span class="media-source"><i class="fas fa-newspaper"></i> Região Hoje</span>
                             <h4>Victor Theodoro - Inovação em Tecnologia Assistiva</h4>
-                            <p class="badge-subtitle">Cobertura de mídia regional online destacando o trabalho inovador de Victor Theodoro em desenvolvimento de soluções tecnológicas para acessibilidade. A matéria apresenta suas contribuições para a área de tecnologia assistiva e seu impacto na comunidade local.</p>
+                            <p class="badge-subtitle">Cobertura regional sobre inovação em tecnologia assistiva e impacto local.</p>
                             <a href="https://www.regiaohoje.com.br/noticia/38090/santa-barbara/brasil/grupo-de-etec-cria-cadeira-de-rodas-com-sistema-de-acessibilidade-inteligente.html" target="_blank" rel="noopener noreferrer"><span data-i18n="media.regiaohoje_btn">Ler Matéria</span> <i class="fas fa-arrow-right"></i></a>
                         </article>
 
@@ -873,7 +873,7 @@
                             </div>
                             <span class="media-source"><i class="fas fa-newspaper"></i> ABC do ABC</span>
                             <h4>Victor Theodoro - Inovação Tecnológica</h4>
-                            <p class="badge-subtitle">Publicação no portal ABC do ABC destacando o trabalho inovador de Victor Theodoro em desenvolvimento de soluções tecnológicas para acessibilidade. A matéria apresenta suas habilidades em desenvolvimento fullstack e sua contribuição para projetos que combinam tecnologia embarcada, inteligência artificial e design ergonômico. Esta cobertura regional reforça sua posição como profissional promissor na área de tecnologia.</p>
+                            <p class="badge-subtitle">Portal ABC destaca projetos de acessibilidade e skills fullstack.</p>
                             <a href="https://abcdoabc.com.br/etec-projeta-cadeira-de-rodas-inteligente/" target="_blank" rel="noopener noreferrer"><span data-i18n="media.abc_btn">Acessar</span> <i class="fas fa-arrow-right"></i></a>
                         </article>
                     </div>
@@ -899,32 +899,10 @@
                 <p class="section-subtitle animate-slide-in-up animate-delay-2" data-i18n="contact.subtitle">Vamos conversar e criar algo incrível juntos</p>
             </div>
             <div class="contact-content animate-slide-in-up animate-delay-3">
-                <!-- Contact Form (abre o app de email do usuário) -->
-                <form class="contact-form" id="contactForm">
-                    <div class="form-group">
-                        <label for="name" data-i18n="contact.name">Seu nome</label>
-                        <input id="name" name="name" type="text" placeholder="Ex: Victor" autocomplete="name" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="email" data-i18n="contact.email">Seu email</label>
-                        <input id="email" name="email" type="email" placeholder="seuemail@exemplo.com" autocomplete="email" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="subject" data-i18n="contact.subject_label">Assunto</label>
-                        <input id="subject" name="subject" type="text" placeholder="Proposta / Oportunidade / Projeto" data-i18n="contact.subject_placeholder" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="message" data-i18n="contact.message">Mensagem</label>
-                        <textarea id="message" name="message" placeholder="Conte um pouco sobre o que você precisa..." required></textarea>
-                    </div>
-                    <button id="submitBtn" type="submit">
-                        <span id="btnText" data-i18n="contact.send">Enviar Mensagem</span>
-                        <i id="btnIcon" class="fas fa-paper-plane" aria-hidden="true"></i>
-                    </button>
-                    <div id="formMessage" class="form-message" aria-live="polite"></div>
-                </form>
-
-                <!-- Social Links -->
+                <div class="contact-panel">
+                    <h3 class="contact-panel-title" data-i18n="contact.panel_title">Bora conversar?</h3>
+                    <p class="contact-note" data-i18n="contact.social_note">Escolha sua rede social preferida para continuar a conversa.</p>
+                </div>
                 <div class="contact-links">
                     <a href="https://wa.me/5513996016551" class="contact-btn contact-btn-whatsapp animate-bounce-in animate-delay-4" target="_blank" rel="noopener noreferrer">
                         <i class="fab fa-whatsapp"></i>
