Ajusta espaçamento de itens no menu de navegação e atualiza links para melhor organização

--- a/index.html
+++ b/index.html
@@ -95,23 +95,15 @@
                 <ul class="nav-links" id="navLinks">
                     <li><a href="#home" class="nav-link" data-i18n="nav.home">Home</a></li>
                     <li><a href="#sobre" class="nav-link" data-i18n="nav.about">Sobre</a></li>
-                    <li><a href="#skills" class="nav-link" data-i18n="nav.skills">Skills</a></li>
-                    <li><a href="#certificacoes" class="nav-link" data-i18n="nav.certifications">Certificações</a></li>
-                    <li><a href="#premios-oficiais" class="nav-link" data-i18n="nav.awards">Prêmios</a></li>
-                    <li><a href="#reconhecimentos" class="nav-link" data-i18n="nav.recognitions">Reconhecimentos</a></li>
                     <li><a href="#projetos" class="nav-link" data-i18n="nav.projects">Projetos</a></li>
-                    <li><a href="#midia" class="nav-link" data-i18n="nav.media">Mídia</a></li>
+                    <li><a href="#premios-oficiais" class="nav-link" data-i18n="nav.awards">Prêmios</a></li>
+                    <li><a href="#contato" class="nav-link" data-i18n="nav.contact">Contato</a></li>
                 </ul>
 
                 <button class="language-toggle" id="languageToggle" aria-label="Alternar idioma" title="PT | EN">
                     <i class="fas fa-globe"></i>
                     <span class="lang-text">PT</span>
                 </button>
-
-                <a class="btn btn-primary btn-sm navbar-cta" href="#contato">
-                    <span data-i18n="nav.contact">Contato</span>
-                    <i class="fas fa-paper-plane" aria-hidden="true"></i>
-                </a>
 
                 <button class="mobile-menu-btn" id="mobileMenuBtn" type="button" aria-label="Abrir menu" aria-controls="navLinks" aria-expanded="false">
                     <span></span>
